# weatherstation

./: .clang-format  .gitignore  CMakeLists.txt  windvane_adc_levels.py
src/: CMakeLists.txt  main.cc
